# jbProject1

./: Automaton.h  BlockCommentAutomaton.cpp  BlockCommentAutomaton.h  CMakeLists.txt  CommentAutomaton.cpp  CommentAutomaton.h  IdAutomaton.cpp  IdAutomaton.h  Lexer.cpp  Lexer.h  MatcherAutomaton.cpp  MatcherAutomaton.h  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  Token.h  UndefinedAutomaton.cpp  UndefinedAutomaton.h  UndefinedStringAutomaton.cpp  UndefinedStringAutomaton.h  main.cpp  yes  yes.pub
Test/: input1.txt
